[project]
name = "bleemeo"
version = "0.6.0"
description = "A simple Python3 client for interacting with the Bleemeo API."
authors = [{ name = "Bleemeo Packaging Team", email = "packaging-team@bleemeo.com" }]
requires-python = ">=3.8"
readme = "README.md"

dependencies = [
    "requests",
]

[dependency-groups]
dev = [
    "tox",
    "mypy",
    "types-requests",
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "COM",
    "E",
    "F", # Pyflakes
    "FLY", # flynt
    "I",
    "ISC",
    "PERF",
    "PL", # Pylint
    "RUF",
    "S", # Bandit
    "UP",
    "W",
]
# COM812: as recommended by ruff-format
ignore = ["COM812", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "E501", "RUF012", "S311", "PERF203"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
